--- a/src/transform/transform_data.ipynb
+++ b/src/transform/transform_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "df[\"cpf_cnpj\"] = df[\"cpf_cnpj\"].astype(str)\n",
     "\n",
     "# Remove os caracteres '.', '-', '/' usando expressão regular\n",
-    "df[\"cpf_cnpj\"] = df[\"cpf_cnpj\"].str.replace(r\"[./-]\", \"\", regex=True)\n",
+    "# df[\"cpf_cnpj\"] = df[\"cpf_cnpj\"].str.replace(r\"[./-]\", \"\", regex=True)\n",
     "\n",
     "# Remove duplicados do CPF tratando como um unico cliente\n",
     "df = df.drop_duplicates(subset=[\"cpf_cnpj\"], keep=\"first\")"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "      <td>Abelanio Veríssimo Peixoto</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>83521232034</td>\n",
+       "      <td>685.796.740-77</td>\n",
        "      <td>Isento</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -198,7 +198,7 @@
        "      <td>Aclecia da Silva</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>27010089051</td>\n",
+       "      <td>281.742.620-75</td>\n",
        "      <td>30234875</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -218,7 +218,7 @@
        "      <td>Adeilton da Mata</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>71988249007</td>\n",
+       "      <td>673.248.950-00</td>\n",
        "      <td>40259595</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -238,7 +238,7 @@
        "      <td>Adeilton da Silva</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>36544973068</td>\n",
+       "      <td>108.151.210-59</td>\n",
        "      <td>3614522-0</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -258,7 +258,7 @@
        "      <td>Adeilton Teixeira de Lima</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>62950454054</td>\n",
+       "      <td>976.069.770-03</td>\n",
        "      <td>36145220</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -278,7 +278,7 @@
        "      <td>Adelmo Luiz Berto De Oliveira</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>54098736020</td>\n",
+       "      <td>660.107.170-60</td>\n",
        "      <td>ISENTO</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -298,7 +298,7 @@
        "      <td>Ademar Manoel da Silva</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>85604945000175</td>\n",
+       "      <td>52.459.301/0001-81</td>\n",
        "      <td>30972841</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -313,32 +313,12 @@
        "      <td>silva</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>565</td>\n",
-       "      <td>Adilson Pereira Da Silva</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>28043105000147</td>\n",
-       "      <td>35170212</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Ass.: Flor do Mundaú</td>\n",
-       "      <td>Pop Matinha</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Zona Rural</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste8@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1057</td>\n",
        "      <td>Adriana Paulino da Silva</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
-       "      <td>92678107000101</td>\n",
+       "      <td>54.404.537/0001-46</td>\n",
        "      <td>ISENTO</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
@@ -365,44 +345,50 @@
        "4  1427      Adeilton Teixeira de Lima  teste@gmail.com  99999999999   \n",
        "5   503  Adelmo Luiz Berto De Oliveira  teste@gmail.com  99999999999   \n",
        "6  1288         Ademar Manoel da Silva  teste@gmail.com  99999999999   \n",
-       "7   565       Adilson Pereira Da Silva  teste@gmail.com  99999999999   \n",
        "8  1057       Adriana Paulino da Silva  teste@gmail.com  99999999999   \n",
        "\n",
-       "         cpf_cnpj      rg_ie  filial_id  idCidade                   Endereco  \\\n",
-       "0     83521232034     Isento         35      1659         Vila São Sebastião   \n",
-       "1     27010089051   30234875         35      1659            Maria de Lurdes   \n",
-       "2     71988249007   40259595         35      1659        Ass. Nova Esperança   \n",
-       "3     36544973068  3614522-0         35      1659                    Gravatá   \n",
-       "4     62950454054   36145220         35      1659          João Lyra / Qd: A   \n",
-       "5     54098736020     ISENTO         35      1659  Rua: Manoel Luiz da Silva   \n",
-       "6  85604945000175   30972841         35      1659       Ass.: Flor do Mundaú   \n",
-       "7  28043105000147   35170212         35      1659       Ass.: Flor do Mundaú   \n",
-       "8  92678107000101     ISENTO         35      1659             Platô 1/ Q: 02   \n",
+       "             cpf_cnpj      rg_ie  filial_id  idCidade  \\\n",
+       "0      685.796.740-77     Isento         35      1659   \n",
+       "1      281.742.620-75   30234875         35      1659   \n",
+       "2      673.248.950-00   40259595         35      1659   \n",
+       "3      108.151.210-59  3614522-0         35      1659   \n",
+       "4      976.069.770-03   36145220         35      1659   \n",
+       "5      660.107.170-60     ISENTO         35      1659   \n",
+       "6  52.459.301/0001-81   30972841         35      1659   \n",
+       "8  54.404.537/0001-46     ISENTO         35      1659   \n",
        "\n",
-       "                 Complemento Numero                       Bairro        Cep  \\\n",
-       "0        Próximo ao cacimbão      0                       Centro  57830-000   \n",
-       "1         Próximo ao mirante     SN                       Centro  57830-000   \n",
-       "2  próximo a casa de farinha     SN                   Zona Rural  57830-000   \n",
-       "3            Lote do Sr. Del     SN                   Zona Rural  57830-000   \n",
-       "4                                24  Conj. Raimundo Nonato Lopes  57830-000   \n",
-       "5         Próximo ao Mirante     SN                       Centro  57830-000   \n",
-       "6                                SN                   Zona Rural  57830-000   \n",
-       "7                Pop Matinha     SN                   Zona Rural  57830-000   \n",
-       "8                                06  Conj. Raimundo Nonato Lopes  57830-000   \n",
+       "                    Endereco                Complemento Numero  \\\n",
+       "0         Vila São Sebastião        Próximo ao cacimbão      0   \n",
+       "1            Maria de Lurdes         Próximo ao mirante     SN   \n",
+       "2        Ass. Nova Esperança  próximo a casa de farinha     SN   \n",
+       "3                    Gravatá            Lote do Sr. Del     SN   \n",
+       "4          João Lyra / Qd: A                                24   \n",
+       "5  Rua: Manoel Luiz da Silva         Próximo ao Mirante     SN   \n",
+       "6       Ass.: Flor do Mundaú                                SN   \n",
+       "8             Platô 1/ Q: 02                                06   \n",
        "\n",
-       "   idPlanoIXC  idVencimentoIXC              Login    Senha  \n",
-       "0         NaN              NaN  teste1@radios.com  peixoto  \n",
-       "1         NaN              NaN  teste2@radios.com    silva  \n",
-       "2         NaN              NaN  teste3@radios.com     mata  \n",
-       "3         NaN              NaN  teste4@radios.com    silva  \n",
-       "4         NaN              NaN  teste5@radios.com     lima  \n",
-       "5         NaN              NaN  teste6@radios.com    silva  \n",
-       "6         NaN              NaN  teste7@radios.com    silva  \n",
-       "7         NaN              NaN  teste8@radios.com    silva  \n",
-       "8         NaN              NaN  teste9@radios.com    silva  "
+       "                        Bairro        Cep  idPlanoIXC  idVencimentoIXC  \\\n",
+       "0                       Centro  57830-000         NaN              NaN   \n",
+       "1                       Centro  57830-000         NaN              NaN   \n",
+       "2                   Zona Rural  57830-000         NaN              NaN   \n",
+       "3                   Zona Rural  57830-000         NaN              NaN   \n",
+       "4  Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
+       "5                       Centro  57830-000         NaN              NaN   \n",
+       "6                   Zona Rural  57830-000         NaN              NaN   \n",
+       "8  Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
+       "\n",
+       "               Login    Senha  \n",
+       "0  teste1@radios.com  peixoto  \n",
+       "1  teste2@radios.com    silva  \n",
+       "2  teste3@radios.com     mata  \n",
+       "3  teste4@radios.com    silva  \n",
+       "4  teste5@radios.com     lima  \n",
+       "5  teste6@radios.com    silva  \n",
+       "6  teste7@radios.com    silva  \n",
+       "8  teste9@radios.com    silva  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
