correção dos dados NaN

--- a/src/transform/transform_data.ipynb
+++ b/src/transform/transform_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,271 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>razaoSocial</th>\n",
-       "      <th>Email</th>\n",
-       "      <th>Celular</th>\n",
-       "      <th>cpf_cnpj</th>\n",
-       "      <th>rg_ie</th>\n",
-       "      <th>filial_id</th>\n",
-       "      <th>idCidade</th>\n",
-       "      <th>Endereco</th>\n",
-       "      <th>Complemento</th>\n",
-       "      <th>Numero</th>\n",
-       "      <th>Bairro</th>\n",
-       "      <th>Cep</th>\n",
-       "      <th>idPlanoIXC</th>\n",
-       "      <th>idVencimentoIXC</th>\n",
-       "      <th>Login</th>\n",
-       "      <th>Senha</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1306</td>\n",
-       "      <td>Abelanio Veríssimo Peixoto</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>685.796.740-77</td>\n",
-       "      <td>Isento</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Vila São Sebastião</td>\n",
-       "      <td>Próximo ao cacimbão</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Centro</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste1@radios.com</td>\n",
-       "      <td>peixoto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>897</td>\n",
-       "      <td>Aclecia da Silva</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>281.742.620-75</td>\n",
-       "      <td>30234875</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Maria de Lurdes</td>\n",
-       "      <td>Próximo ao mirante</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Centro</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste2@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1120</td>\n",
-       "      <td>Adeilton da Mata</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>673.248.950-00</td>\n",
-       "      <td>40259595</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Ass. Nova Esperança</td>\n",
-       "      <td>próximo a casa de farinha</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Zona Rural</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste3@radios.com</td>\n",
-       "      <td>mata</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1524</td>\n",
-       "      <td>Adeilton da Silva</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>108.151.210-59</td>\n",
-       "      <td>3614522-0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Gravatá</td>\n",
-       "      <td>Lote do Sr. Del</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Zona Rural</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste4@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1427</td>\n",
-       "      <td>Adeilton Teixeira de Lima</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>976.069.770-03</td>\n",
-       "      <td>36145220</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>João Lyra / Qd: A</td>\n",
-       "      <td></td>\n",
-       "      <td>24</td>\n",
-       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste5@radios.com</td>\n",
-       "      <td>lima</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>503</td>\n",
-       "      <td>Adelmo Luiz Berto De Oliveira</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>660.107.170-60</td>\n",
-       "      <td>ISENTO</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Rua: Manoel Luiz da Silva</td>\n",
-       "      <td>Próximo ao Mirante</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Centro</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste6@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1288</td>\n",
-       "      <td>Ademar Manoel da Silva</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>52.459.301/0001-81</td>\n",
-       "      <td>30972841</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Ass.: Flor do Mundaú</td>\n",
-       "      <td></td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Zona Rural</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste7@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>Adriana Paulino da Silva</td>\n",
-       "      <td>teste@gmail.com</td>\n",
-       "      <td>99999999999</td>\n",
-       "      <td>54.404.537/0001-46</td>\n",
-       "      <td>ISENTO</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Platô 1/ Q: 02</td>\n",
-       "      <td></td>\n",
-       "      <td>06</td>\n",
-       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>teste9@radios.com</td>\n",
-       "      <td>silva</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     id                    razaoSocial            Email      Celular  \\\n",
-       "0  1306     Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999   \n",
-       "1   897               Aclecia da Silva  teste@gmail.com  99999999999   \n",
-       "2  1120               Adeilton da Mata  teste@gmail.com  99999999999   \n",
-       "3  1524              Adeilton da Silva  teste@gmail.com  99999999999   \n",
-       "4  1427      Adeilton Teixeira de Lima  teste@gmail.com  99999999999   \n",
-       "5   503  Adelmo Luiz Berto De Oliveira  teste@gmail.com  99999999999   \n",
-       "6  1288         Ademar Manoel da Silva  teste@gmail.com  99999999999   \n",
-       "8  1057       Adriana Paulino da Silva  teste@gmail.com  99999999999   \n",
-       "\n",
-       "             cpf_cnpj      rg_ie  filial_id  idCidade  \\\n",
-       "0      685.796.740-77     Isento         35      1659   \n",
-       "1      281.742.620-75   30234875         35      1659   \n",
-       "2      673.248.950-00   40259595         35      1659   \n",
-       "3      108.151.210-59  3614522-0         35      1659   \n",
-       "4      976.069.770-03   36145220         35      1659   \n",
-       "5      660.107.170-60     ISENTO         35      1659   \n",
-       "6  52.459.301/0001-81   30972841         35      1659   \n",
-       "8  54.404.537/0001-46     ISENTO         35      1659   \n",
-       "\n",
-       "                    Endereco                Complemento Numero  \\\n",
-       "0         Vila São Sebastião        Próximo ao cacimbão      0   \n",
-       "1            Maria de Lurdes         Próximo ao mirante     SN   \n",
-       "2        Ass. Nova Esperança  próximo a casa de farinha     SN   \n",
-       "3                    Gravatá            Lote do Sr. Del     SN   \n",
-       "4          João Lyra / Qd: A                                24   \n",
-       "5  Rua: Manoel Luiz da Silva         Próximo ao Mirante     SN   \n",
-       "6       Ass.: Flor do Mundaú                                SN   \n",
-       "8             Platô 1/ Q: 02                                06   \n",
-       "\n",
-       "                        Bairro        Cep  idPlanoIXC  idVencimentoIXC  \\\n",
-       "0                       Centro  57830-000         NaN              NaN   \n",
-       "1                       Centro  57830-000         NaN              NaN   \n",
-       "2                   Zona Rural  57830-000         NaN              NaN   \n",
-       "3                   Zona Rural  57830-000         NaN              NaN   \n",
-       "4  Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
-       "5                       Centro  57830-000         NaN              NaN   \n",
-       "6                   Zona Rural  57830-000         NaN              NaN   \n",
-       "8  Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
-       "\n",
-       "               Login    Senha  \n",
-       "0  teste1@radios.com  peixoto  \n",
-       "1  teste2@radios.com    silva  \n",
-       "2  teste3@radios.com     mata  \n",
-       "3  teste4@radios.com    silva  \n",
-       "4  teste5@radios.com     lima  \n",
-       "5  teste6@radios.com    silva  \n",
-       "6  teste7@radios.com    silva  \n",
-       "8  teste9@radios.com    silva  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Substitui NaN por vazio no campo Complemento\n",
     "df[\"Complemento\"] = df[\"Complemento\"].fillna(\"\")\n",
@@ -416,8 +154,7 @@
     "        return \"SN\"\n",
     "\n",
     "# Aplica a função na coluna Numero\n",
-    "df[\"Numero\"] = df[\"Numero\"].apply(tratar_numero)\n",
-    "df"
+    "df[\"Numero\"] = df[\"Numero\"].apply(tratar_numero)"
    ]
   },
   {
@@ -429,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
