adidiconando a data da ultima inserção para não sobrescrever o arquivo anterior

--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -169,34 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "razaoSocial       Ademar Manoel da Silva\n",
-      "Email                    teste@gmail.com\n",
-      "Celular                      99999999999\n",
-      "cpf_cnpj              52.459.301/0001-81\n",
-      "rg_ie                           30972841\n",
-      "filial_id                             35\n",
-      "idCidade                            1659\n",
-      "Endereco            Ass.: Flor do Mundaú\n",
-      "Complemento                             \n",
-      "Numero                                SN\n",
-      "Bairro                        Zona Rural\n",
-      "Cep                            57830-000\n",
-      "idClienteIXC                        None\n",
-      "statusInsercao                      None\n",
-      "logRetorno                          None\n",
-      "Name: 6, dtype: object\n",
-      "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117635\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"26\\\\/12\\\\/2024\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919623\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crie uma cópia do DataFrame original para evitar o SettingWithCopyWarning\n",
     "df = df.copy()\n",
@@ -221,7 +196,6 @@
     "    bairro = row[\"Bairro\"]\n",
     "    cep = row[\"Cep\"]\n",
     "    \n",
-    "    print(row)\n",
     "    # Chamamos a função inserir_cliente:\n",
     "    response = inserir_cliente(\n",
     "        razao=razao,\n",
@@ -272,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -324,6 +298,114 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abelanio Veríssimo Peixoto</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>685.796.740-77</td>\n",
+       "      <td>Isento</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>Próximo ao cacimbão</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117636</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aclecia da Silva</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>281.742.620-75</td>\n",
+       "      <td>30234875</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Maria de Lurdes</td>\n",
+       "      <td>Próximo ao mirante</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117637</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adeilton da Mata</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>673.248.950-00</td>\n",
+       "      <td>40259595</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Ass. Nova Esperança</td>\n",
+       "      <td>próximo a casa de farinha</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117638</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adeilton da Silva</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>108.151.210-59</td>\n",
+       "      <td>3614522-0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Gravatá</td>\n",
+       "      <td>Lote do Sr. Del</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117639</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adeilton Teixeira de Lima</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>976.069.770-03</td>\n",
+       "      <td>36145220</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>João Lyra / Qd: A</td>\n",
+       "      <td></td>\n",
+       "      <td>24</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117640</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Adelmo Luiz Berto De Oliveira</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>660.107.170-60</td>\n",
+       "      <td>ISENTO</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Rua: Manoel Luiz da Silva</td>\n",
+       "      <td>Próximo ao Mirante</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117641</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Ademar Manoel da Silva</td>\n",
        "      <td>teste@gmail.com</td>\n",
@@ -337,7 +419,25 @@
        "      <td>SN</td>\n",
        "      <td>Zona Rural</td>\n",
        "      <td>57830-000</td>\n",
-       "      <td>117635</td>\n",
+       "      <td>117642</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Adriana Paulino da Silva</td>\n",
+       "      <td>teste@gmail.com</td>\n",
+       "      <td>99999999999</td>\n",
+       "      <td>54.404.537/0001-46</td>\n",
+       "      <td>ISENTO</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Platô 1/ Q: 02</td>\n",
+       "      <td></td>\n",
+       "      <td>06</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>117643</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -346,20 +446,58 @@
        "</div>"
       ],
       "text/plain": [
-       "              razaoSocial            Email      Celular            cpf_cnpj  \\\n",
-       "6  Ademar Manoel da Silva  teste@gmail.com  99999999999  52.459.301/0001-81   \n",
+       "                     razaoSocial            Email      Celular  \\\n",
+       "0     Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999   \n",
+       "1               Aclecia da Silva  teste@gmail.com  99999999999   \n",
+       "2               Adeilton da Mata  teste@gmail.com  99999999999   \n",
+       "3              Adeilton da Silva  teste@gmail.com  99999999999   \n",
+       "4      Adeilton Teixeira de Lima  teste@gmail.com  99999999999   \n",
+       "5  Adelmo Luiz Berto De Oliveira  teste@gmail.com  99999999999   \n",
+       "6         Ademar Manoel da Silva  teste@gmail.com  99999999999   \n",
+       "7       Adriana Paulino da Silva  teste@gmail.com  99999999999   \n",
        "\n",
-       "      rg_ie filial_id idCidade              Endereco Complemento Numero  \\\n",
-       "6  30972841        35     1659  Ass.: Flor do Mundaú                 SN   \n",
+       "             cpf_cnpj      rg_ie filial_id idCidade  \\\n",
+       "0      685.796.740-77     Isento        35     1659   \n",
+       "1      281.742.620-75   30234875        35     1659   \n",
+       "2      673.248.950-00   40259595        35     1659   \n",
+       "3      108.151.210-59  3614522-0        35     1659   \n",
+       "4      976.069.770-03   36145220        35     1659   \n",
+       "5      660.107.170-60     ISENTO        35     1659   \n",
+       "6  52.459.301/0001-81   30972841        35     1659   \n",
+       "7  54.404.537/0001-46     ISENTO        35     1659   \n",
        "\n",
-       "       Bairro        Cep idClienteIXC statusInsercao  \\\n",
-       "6  Zona Rural  57830-000       117635        sucesso   \n",
+       "                    Endereco                Complemento Numero  \\\n",
+       "0         Vila São Sebastião        Próximo ao cacimbão      0   \n",
+       "1            Maria de Lurdes         Próximo ao mirante     SN   \n",
+       "2        Ass. Nova Esperança  próximo a casa de farinha     SN   \n",
+       "3                    Gravatá            Lote do Sr. Del     SN   \n",
+       "4          João Lyra / Qd: A                                24   \n",
+       "5  Rua: Manoel Luiz da Silva         Próximo ao Mirante     SN   \n",
+       "6       Ass.: Flor do Mundaú                                SN   \n",
+       "7             Platô 1/ Q: 02                                06   \n",
+       "\n",
+       "                        Bairro        Cep idClienteIXC statusInsercao  \\\n",
+       "0                       Centro  57830-000       117636        sucesso   \n",
+       "1                       Centro  57830-000       117637        sucesso   \n",
+       "2                   Zona Rural  57830-000       117638        sucesso   \n",
+       "3                   Zona Rural  57830-000       117639        sucesso   \n",
+       "4  Conj. Raimundo Nonato Lopes  57830-000       117640        sucesso   \n",
+       "5                       Centro  57830-000       117641        sucesso   \n",
+       "6                   Zona Rural  57830-000       117642        sucesso   \n",
+       "7  Conj. Raimundo Nonato Lopes  57830-000       117643        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
-       "6  {'type': 'success', 'message': 'Registro inser...  "
+       "0  {'type': 'success', 'message': 'Registro inser...  \n",
+       "1  {'type': 'success', 'message': 'Registro inser...  \n",
+       "2  {'type': 'success', 'message': 'Registro inser...  \n",
+       "3  {'type': 'success', 'message': 'Registro inser...  \n",
+       "4  {'type': 'success', 'message': 'Registro inser...  \n",
+       "5  {'type': 'success', 'message': 'Registro inser...  \n",
+       "6  {'type': 'success', 'message': 'Registro inser...  \n",
+       "7  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
